<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textPersonMame"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textPassword"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textEmailAddress"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textMultiline"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/numberPassword"
        android:inputType="numberPassword"
        android:importantForAutofill="no" />

</LinearLayout>